--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <div class="carousel-item">
-                    <img src="img/pexels-skitterphoto-1083366.jpeg" class="d-block w-100" alt="downtown">
+                    <!-- <img src="img/pexels-skitterphoto-1083366.jpeg" class="d-block w-100" alt="downtown"> -->
               </div>
             </div>
           </div>
